# SME

./: .ycm_extra_conf.py  CMakeLists.txt
OpenGLRenderer/: .Shader.cpp.swo  CMakeLists.txt  Camera.cpp  Camera.h  MeshRenderer.cpp  MeshRenderer.h  OpenGLRendererSystem.cpp  OpenGLRendererSystem.h  SMEOpenGLWidget.cpp  SMEOpenGLWidget.h  Shader.cpp  Shader.h  initPlugin.cpp
Physics/: CMakeLists.txt  CorotationalElasticFEM.cpp  CorotationalElasticFEM.h  PhysicsSystem.cpp  PhysicsSystem.h  initPlugin.cpp
apps/: CMakeLists.txt  SMEApplication.cpp  SMEApplication.h  main.cpp
cmake/: FindDL.cmake  FindEGL.cmake  FindEigen3.cmake  FindGLM.cmake
core/: .CMakeLists.txt.swp  .Transform.cpp.swp  AssetFactory.cpp  AssetFactory.h  AssetLibrary.cpp  AssetLibrary.h  CMakeLists.txt  ComponentFactory.cpp  ComponentFactory.h  Data.cpp  Data.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  SceneLoader.cpp  SceneLoader.h  SystemFactory.cpp  SystemFactory.h  World.cpp  World.h
core/corePlugin/: CMakeLists.txt  Transform.cpp  Transform.h  TransformSystem.h  initPlugin.cpp  transformsystem.cpp
core/corePlugin/assets/: .MeshAsset.cpp.swo  .MeshAsset.cpp.swp  .MeshAsset.h.swp  Mesh.cpp  Mesh.h  TetraMesh.cpp  TetraMesh.h
core/helpers/: functions.cpp
