CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SME)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
set(CMAKE_AUTOMOC ON)
add_definitions(-std=c++11 -ldl)

SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

#Project dependencies
add_subdirectory(${CMAKE_SOURCE_DIR}/external/tinyxml2)
add_subdirectory(${CMAKE_SOURCE_DIR}/external/assimp-3.0)

#Core
ADD_SUBDIRECTORY(core)

#Plugins
ADD_SUBDIRECTORY(core/corePlugin)
ADD_SUBDIRECTORY(OpenGLRenderer)
ADD_SUBDIRECTORY(Physics)

#Apps
ADD_SUBDIRECTORY(apps)

